Fixing Table Overflow

--- a/docs/manual/docs/css/styles.css
+++ b/docs/manual/docs/css/styles.css
@@ -30,3 +30,8 @@
     width: 150px;
   }
 }
+@media screen and (min-width: 964px){
+  .md-typeset__scrollwrap{
+    overflow: visible;
+  }  
+}
